--- a/style.css
+++ b/style.css
@@ -1,5 +1,33 @@
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+h1 {
+  display: flex;
+  justify-content: center;
+}
+nav {
+  display: flex;
+  justify-content: center;
+  background-color: aquamarine;
+}
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+#featured-property {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  width: 900px;
+}
+#featured property p {
+  width: 800px;
+}
+
+#details {
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
 }
